# lingxi

./: .gitignore  Cargo.toml  README.md  lingxi.example.toml
src/: auth.rs  main.rs
src/animation/: mod.rs
src/backend/: drm_backend.rs  mod.rs  winit_backend.rs
src/compositor/: handlers.rs  mod.rs  window.rs
src/config/: mod.rs
src/input/: mod.rs
src/layout/: mod.rs
src/renderer/: elements.rs  mod.rs  scene.rs  shaders.rs
